# FYP-2022-Server

./: .gitignore  README.md  app.js  package-lock.json  package.json
config/: db.js
controllers/auth/: AuthController.js
controllers/database/: TestController.js
controllers/snark/: SnarkController.js
public/javascripts/: index.js  snark.js  snarkResult.js
public/javascripts/components/: footer.js  header.js
public/stylesheets/: snark.css  style.css
public/stylesheets/snark/: snark.css
routes/: admin.js  api.js  auth.js  index.js  snark.js  test.js
snark/: .gitignore  CMakeLists.txt
snark/src/: CMakeLists.txt  certificate.cpp  certificate.h  main.cpp  merklecircuit.h  test.cpp  test.h
views/: index.ejs  index.jade  snark.ejs
views/auth/: login.ejs  register.ejs
views/snarkViews/: snark.ejs  snarkResult.ejs
views/templates/: head.ejs
